--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,6 +7,18 @@ workflows:
       flutter: 3.16.3
       xcode: 15
       cocoapods: 1.12.0
-    scripts: 
-      - flutter emulators --launch emulator
-      - make it
+    scripts:
+    - name: Emulator tests
+      script: | 
+        # this command will will shutdown the existing simulators to save on resources.
+        xcrun simctl shutdown all
+        #  
+        # create new simulator with specified configuration, you can run 
+        # 'xcrun simctl list' - to check the list of available simulator configurations
+        TEST_DEVICE=$(xcrun simctl create test-device com.apple.CoreSimulator.SimDeviceType.iPhone-11 com.apple.CoreSimulator.SimRuntime.iOS-15-0)
+        #
+        # boot the newly created simulator
+        xcrun simctl boot $TEST_DEVICE
+        #
+        # run the actual test command
+        flutter -d $TEST_DEVICE drive --driver=integration_test/test_driver/integration_driver.dart --target integration_test/counter_test.dart --debug
